# kstocks-server

./: Cargo.toml  README.md
src/: aggregation.rs  api.rs  dashboard.rs  db.rs  main.rs  market_clock.rs  retention.rs  settings.rs  stats.rs  symbols.rs
src/api/: admin.rs  auth_middleware.rs  client_auth.rs  health.rs  index_ohlc.rs  mod.rs  option_ohlc.rs  register.rs  validate.rs
src/market/: http.rs  market_clock.rs  mod.rs  symbols.rs
src/market/streamers/: indices.rs  mod.rs  options.rs
src/storage/: mod.rs  ohlc.rs  retention.rs
src/streamers/: indices.rs  options.rs
src/users/: admin_cli.rs  keys.rs  mod.rs
src/utils/: dashboard.rs  mod.rs
