[package]
name = "kstocks_server"
version = "0.1.0"
description = "Standalone CLI backend: fetches NSE index/option WSS ticks and stores them"
edition = "2024"

[[bin]]
name = "kstocks-server"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6.0.0"
tokio = { version = "1.52.3", features = ["full"] }
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }
anyhow = "1.0.103"
sqlx = { version = "0.9.0", features = ["postgres", "runtime-tokio", "macros", "chrono"] }
futures = "0.3.32"
chrono = { version = "0.4.45", features = ["serde"] }
lazy_static = "1.5.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2.1"
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }